Summit_VO_Zenoh_testing/k8s_deployment/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: ngnix-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: cors-nginx
        image: robopaas/cors
        resources:
          requests:
            cpu: "2"
            memory: 2048Mi
          limits:
            cpu: "2"
            memory: 2048Mi 
        volumeMounts:
          - name: summit
            mountPath: /usr/share/nginx/html/summit
            subPath: summit
        ports:
        - containerPort: 80
      volumes:
        - name: summit
          configMap:
            name: summit
            items:
            - key: summit
              path: summit
                         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
  - host: ngnix.robopaas.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ngnix-service
            port:
              number: 80
